<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_invite"
        android:title="@string/menu_group_detail_title_1"
        android:icon="@drawable/ic_person_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cashbox"
        android:title="@string/menu_group_detail_title_2"
        android:icon="@drawable/ic_wallet"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_create_game"
        android:title="@string/menu_group_detail_title_3"
        android:icon="@drawable/ic_add"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/menu_group_detail_title_4"
        android:icon="@drawable/ic_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_transfer_ownership"
        android:title="@string/menu_group_detail_title_5"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_leave_group"
        android:title="@string/menu_group_detail_title_6"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_archive"
        android:title="@string/menu_group_detail_title_7"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_group_detail_title_8"
        app:showAsAction="never" />

</menu>
