<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/gamesFragment"
        android:icon="@drawable/ic_sports_soccer"
        android:title="@string/nav_games" />

    <item
        android:id="@+id/playersFragment"
        android:icon="@drawable/ic_group"
        android:title="@string/nav_players" />

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/leagueFragment"
        android:icon="@drawable/ic_bar_chart"
        android:title="@string/bottom_nav_menu_title_1" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />

</menu>
