<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="48dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_splash_branding_text_1"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSplashVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/layout_splash_branding_text_3"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/layout_splash_branding_text_2"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="?attr/colorOnSurface" />

</LinearLayout>
